Update git ignore + add more logic to task